# kfp-decorators

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/kfp_decorators/: __init__.py  _version.py  components.py  dsl.py  pipeline_task.py  types.py
tests/: test_components.py  test_dsl.py  test_pipeline_task.py  test_version.py
